--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,11 @@ nav ul li a:hover {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+.locations {
+    display: flex;
+    justify-content: space-around;
+}
+
 h2 {
     color: #a2bfd1; /* Medium Blue */
     margin-bottom: 15px;
